CSS cleanup, fixed overflow
Widget contens and libvis module uses flex column

--- a/web/src/styles/graph.less
+++ b/web/src/styles/graph.less
@@ -1,7 +1,6 @@
 .graph {
     font-family: sans-serif;
     font-size: 11px;
-    margin-right: 10px;
-    max-height: 100%;
-    min-height: 100%;
+    margin-right: 12px;
+    height: 100%;
 }
