--- a/web/src/styles/widget.less
+++ b/web/src/styles/widget.less
@@ -3,43 +3,29 @@
     flex-direction:column;
     background: #fefefe;
 
-    width:calc(100% - 3px);
-    height:calc(100% - 3px);
-    overflow:hidden;
-
     padding:0px;
     border-radius:2.5px;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.14), 0 0px 2px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);
 }
 
-.vis {
+.flex-col {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
+    flex-grow: 1;
+    height: 42px;
 }
 
 .libvismod{
+    .flex-col();
+    //border: 1px solid red;
+}
+.widget-contents{
+    .flex-col();
+    overflow:auto;
+}
+
+.contents{
     display:contents
-}
-.wrapper{
-    display:contents
-}
-
-.container{
-    flex-grow:100;
-    height: 5%; //Just some arbitrary value seems to work
-}
-
-.container.graph{
-    max-height: calc(100% - 32px);
-    min-height: calc(100% - 32px);
-}
-
-.title{
-    margin:4px;
-    padding: 4px;
-    border-bottom:1px solid #eee;
 }
 
 .title{
